monticore-generator/src/test/resources/cocos/invalid/A2106/A2106d.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2106;

grammar A2106d {
  enum A = "a";

  abstract B implements A;

}

